Update footer and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PollStream - Monochrome Edition</title>
+    <title>PollStream</title>
     <script>
       // Polyfill process.env for browser environments to prevent ReferenceErrors
       window.process = window.process || { env: {} };
